pom.xml Deploy to pi changes / now working + app.properties added RFID id